Update version bumpitty bump

--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@walnut/design",
-  "version": "2.5.0",
+  "version": "1.0.0",
   "main": "index.js",
   "private": true,
   "dependencies": {
-    "@walnut/design": "1.0.0"
+    "lodash": "latest"
   },
   "scripts": {
     "test": "echo testing design  with version $npm_package_version"
