--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
-    "@walnut/design": "^3.0.0"
+    "@walnut/design": "2.0.0"
   },
   "scripts": {
     "test": "echo testing server with version $npm_package_version"
